src/sics/seiois/ei/grammar/Grammar.java
/* Generated By:JavaCC: Do not edit this line. Grammar.java */
package sics.seiois.ei.grammar;

@SuppressWarnings("all")
public class Grammar implements GrammarConstants {
  public static void main(String args[]) throws ParseException {
    Grammar parser = new Grammar(System.in);
    Grammar.ree();
  }

  static final public String ree() throws ParseException {
        StringBuilder ruleStringBuilder = new StringBuilder();
        String deduction;
        Token token = null;
    token = jj_consume_token(T_OPEN_SB);
                ruleStringBuilder.append(token.image);
    jj_consume_token(23);
                ruleStringBuilder.append("REE:");
    deduction = deduction();
                ruleStringBuilder.append(deduction);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case T_COMMA:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      token = jj_consume_token(T_COMMA);
                        ruleStringBuilder.append(token.image);
      deduction = deduction();
                        ruleStringBuilder.append(deduction);
    }
    /* 推导-> */
            token = jj_consume_token(T_DEDUCTION);
                ruleStringBuilder.append(token.image);
    deduction = deduction();
                ruleStringBuilder.append(deduction);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case T_COMMA:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      token = jj_consume_token(T_COMMA);
                        ruleStringBuilder.append(token.image);
      deduction = deduction();
                        ruleStringBuilder.append(deduction);
    }
    token = jj_consume_token(T_CLOSE_SB);
                ruleStringBuilder.append(token.image);
                System.out.println(ruleStringBuilder.toString());
                {if (true) return ruleStringBuilder.toString();}
    throw new Error("Missing return statement in function");
  }

/**
 * 
 */
  static final public String deduction() throws ParseException {
        Token token;
        StringBuilder deductionStringBuilder = new StringBuilder();
    //
            token = jj_consume_token(IDENTIFIER);
                deductionStringBuilder.append(token.image);
    jj_consume_token(24);
                deductionStringBuilder.append(".");
    token = jj_consume_token(IDENTIFIER);
                deductionStringBuilder.append(token.image);
    jj_consume_token(24);
                deductionStringBuilder.append(".");
    token = jj_consume_token(IDENTIFIER);
                deductionStringBuilder.append(token.image);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case T_EQUAL:
      token = jj_consume_token(T_EQUAL);
      break;
    case T_EQUAL2:
      token = jj_consume_token(T_EQUAL2);
      break;
    case T_NOTEQUAL:
      token = jj_consume_token(T_NOTEQUAL);
      break;
    case T_NOTEQUAL2:
      token = jj_consume_token(T_NOTEQUAL2);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                deductionStringBuilder.append(token.image);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      token = jj_consume_token(IDENTIFIER);
                deductionStringBuilder.append(token.image);
      jj_consume_token(24);
                deductionStringBuilder.append(".");
      token = jj_consume_token(IDENTIFIER);
                deductionStringBuilder.append(token.image);
      jj_consume_token(24);
                deductionStringBuilder.append(".");
      token = jj_consume_token(IDENTIFIER);
                deductionStringBuilder.append(token.image);
      break;
    case T_SINGLE_Q:
      jj_consume_token(T_SINGLE_Q);
      token = jj_consume_token(IDENTIFIER);
                deductionStringBuilder.append(token.image);
      jj_consume_token(T_SINGLE_Q);
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                System.out.println("deductionCondition:" + deductionStringBuilder.toString());
                {if (true) return deductionStringBuilder.toString();}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public GrammarTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[4];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x40000,0x40000,0x1e000,0xa0000,};
   }

  /** Constructor with InputStream. */
  public Grammar(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Grammar(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new GrammarTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Grammar(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new GrammarTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Grammar(GrammarTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(GrammarTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[25];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 4; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 25; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
